--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "i18next": "^25.0.1",
     "i18next-browser-languagedetector": "^8.0.5",
     "i18next-http-backend": "^3.0.2",
+    "jwt-decode": "^4.0.0",
     "lightweight-charts": "^5.0.2",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
