--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "i18next-http-backend": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "lightweight-charts": "^5.0.2",
+    "lodash.isequal": "^4.5.0",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
