--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "yarn --cwd client dev"
+  "client": "cd client && yarn dev",
+  "server": "cd server && node server.js",
+  "dev": "concurrently \"yarn client\" \"yarn server\""
   },
   "keywords": [],
   "author": "",
