--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "client": "cd client && yarn dev",
-  "server": "cd server && node server.js",
-  "dev": "yarn --cwd client dev" 
- },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "yarn --cwd client dev"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
