--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
   "client": "yarn --cwd client dev",
-  "server": "yarn --cwd server dev"
+  "server": "yarn --cwd server dev",
+   "dev": "concurrently \"yarn client\" \"yarn server\""
  },
   "keywords": [],
   "author": "",
