--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "scripts": {
     "client": "yarn --cwd client dev",
     "server": "yarn --cwd server dev",
-    "dev": "concurrently \"yarn client\" \"yarn server\""
+    "dev": "concurrently \'yarn client\' \'yarn server\'"
+}
+
   },
   "keywords": [],
   "author": "",
