--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "bitex-trading-web",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "client": "yarn --cwd client build",
-    "server": "yarn --cwd server start",
-    "build": "yarn client",
-    "start": "yarn server"
+   "scripts": {
+    "client": "yarn --cwd client dev",
+    "server": "yarn --cwd server dev",
+    "dev": "concurrently \"yarn client\" \"yarn server\""
   },
   "keywords": [],
   "author": "",
