--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+   "dev": "vite"
   },
   "dependencies": {
     "@ionic/react": "^8.4.3",
