--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "bitex-trading-web",
   "version": "1.0.0",
   "main": "index.js",
- "scripts": {
-  "client": "yarn --cwd client install && yarn --cwd client build",
-  "server": "yarn --cwd server install",
-  "build": "yarn client && yarn server",
-  "start": "node server/index.js",
-  "dev": "concurrently \"yarn --cwd client dev\" \"yarn --cwd server dev\""
-},
+
+  "scripts": {
+    "client:build": "cd client && yarn build",
+    "server:install": "cd server && yarn install",
+    "build": "yarn client:build && yarn server:install",
+    "start": "node server/server.js",
+    "dev": "concurrently \"yarn --cwd client dev\" \"yarn --cwd server dev\""
+  }
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
