--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,4 @@
 VITE_API_URL=https://server-1-nsr1.onrender.com/api
 VITE_WEB_SOCKET_URL=https://server-1-nsr1.onrender.com/
+# VITE_API_URL=http://localhost:5000/api
+# VITE_WEB_SOCKET_URL=http://localhost:5000/
