after hosted complete code recheck

--- a/client/.env
+++ b/client/.env
@@ -1,7 +1,7 @@
-VITE_API_URL=https://server-1-nsr1.onrender.com/api
-VITE_WEB_SOCKET_URL=https://server-1-nsr1.onrender.com
-# VITE_API_URL=http://localhost:5000/api
-# VITE_WEB_SOCKET_URL=http://localhost:5000
+# VITE_API_URL=https://server-1-nsr1.onrender.com/api
+# VITE_WEB_SOCKET_URL=https://server-1-nsr1.onrender.com
+VITE_API_URL=http://localhost:5000/api
+VITE_WEB_SOCKET_URL=http://localhost:5000
 
 
 # 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
